// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Alert prop type is marked as required 1`] = `
<div
  className="alert alert-undefined"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  

</div>
`;

exports[`Component: Alert renders an alert with a close-button 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  

  <button
    aria-label="Close alert"
    className="alert-close"
    data-alert-close=""
    onClick={[Function]}
  >
    
		
    <i
      className="material-icons"
    >
      close
    </i>
    
	
  </button>
  

</div>
`;

exports[`Component: Alert renders an alert with icon 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  >
    test
  </i>
  

</div>
`;

exports[`Component: Alert renders an alert with text 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  <p>
    test
  </p>
  

</div>
`;

exports[`Component: Alert renders an alert with the correct type recieved from its props 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  

</div>
`;

exports[`Component: Alert renders an alert without a close-button if no close prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  

</div>
`;

exports[`Component: Alert renders an alert without an icon if no icon prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  

</div>
`;

exports[`Component: Alert renders an alert without text if no text prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  />
  

</div>
`;
